--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -8,6 +8,38 @@
     flex-direction: column;
     padding-bottom: 110px;
   }
+  .ribbon {
+    background-color: #E17475;
+    overflow: hidden;
+    white-space: nowrap;
+    /* top left corner */
+    position: absolute;
+    right: -50px;
+    top: 40px;
+    z-index: 300;
+    /* 45 deg ccw rotation */
+    -webkit-transform: rotate(45deg);
+       -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+         -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+    /* shadow */
+    -webkit-box-shadow: 0 0 10px #E4F2FD;
+       -moz-box-shadow: 0 0 10px #E4F2FD;
+            box-shadow: 0 0 10px #E4F2FD;
+  }
+  .ribbon a {
+    border: 1px solid #faa;
+    color: #fff;
+    display: block;
+    font: bold 81.25% 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 1px 0;
+    padding: 10px 50px;
+    text-align: center;
+    text-decoration: none;
+    /* shadow */
+    text-shadow: 0 0 5px #444;
+  }
 
   .footer {
     position: fixed;
