--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -4,7 +4,7 @@
       <div class="card-content white-text">
           <div class="input-field col s12 m12 l12">
           <input id="mainquestion" ng-model="title" type="text" class="validate" style="font-size:20px">
-          <label for="mainquestion" style="font-size:20px">Type your questions or options here</label>
+          <label for="mainquestion" id="mainquestionlabel" style="font-size:20px">Type your questions or options here</label>
         </div>
         <div class="input-field col s12 m12 l12" ng-repeat="option in options">
           <input id="option1" ng-model="option.name" ng-focus="addOption()" type="text" class="validate">
