--- a/client/app/views/vote.html
+++ b/client/app/views/vote.html
@@ -3,12 +3,12 @@
     <div class="card blue darken-3">
       <div class="card-content white-text">
           <div class="col s12 m12 l12">
-          <p style="font-size:30px">{{title}}</p>
+          <p style="font-size:30px" id="mainquestion">{{title}}</p>
         </div>
         <div class="col s12 m12 l12" ng-repeat="option in options">
           <p>
           <input ng-model="option.checked" ng-click="updateSelection($index, options)" type="checkbox" id="test{{$index}}" />
-          <label for="test{{$index}}" style="font-size:20px;margin:10px" class='red-text text-lighten-5'>{{option.name}}</label>
+          <label for="test{{$index}}" style="font-size:20px;margin:10px" class='red-text text-lighten-5 questions'>{{option.name}}</label>
           </p>
         </div>
         <div style="clear:both"></div>
